--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-hi, my name is max. welcome to my brutalist website.\n 
+<p>hi, my name is max. welcome to my brutalist website.</p> 
 
-my cv is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.<br>
+<p>my cv is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
 
-if you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.<br>
+<p>if you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.</p>
 
-if you want to read papers i've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.<br>
+<p>if you want to read papers i've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
 
-i maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.<br>
+<p>i maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
