--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
 <p>if you want to read papers i've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
 
+<p>i sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>.</p>
+
 <p>i maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
