--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
 
 <p>i maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
+<p>i sort of have social media accounts but i wouldn't recommend looking at them.</p>
