--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<p>hi, my name is max. welcome to my brutalist website.</p> 
+<p>Hi, my name is max. welcome to my brutalist website.</p> 
 
-<p>my cv is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
+<p>My CV is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
 
-<p>if you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.</p>
+<p>If you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.</p>
 
-<p>if you want to read papers i've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
+<p>If you want to read papers I've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
 
-<p>i sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>.</p>
+<p>I sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>.</p>
 
-<p>i maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
+<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
-<p>i sort of have social media accounts but i wouldn't recommend looking at them.</p>
+<p>I sort of have social media accounts but I wouldn't recommend looking at them.</p>
