--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Hi, my name is max. welcome to my brutalist website.</p> 
+<p>Hi, my name is max. Welcome to my brutalist website.</p> 
 
 <p>My CV is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
 
