added some to index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>If you want to read papers I've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
 
-<p>I sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>.</p>
+<p>I sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>. On that note, I occasionally express ill-considered opinions on miscellaneous topics <a href="https://medium.com/@iusewords/">on medium</a>.</p>
 
 <p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
