--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <p>Hi, my name is max. Welcome to my brutalist website.</p> 
 
+<p>I currently work as a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes out of mixed samples.</p>
+
 <p>My CV is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
 
 <p>If you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.</p>
