more info added to index, for lack of another page.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>Hi, my name is max. Welcome to my brutalist website.</p> 
 
-<p>I currently work as a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes out of mixed samples.</p>
+<p>I currently work as a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial community samples.</p>
 
 <p>My CV is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
 
@@ -13,3 +13,12 @@
 <p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
 
 <p>I sort of have social media accounts but I wouldn't recommend looking at them.</p>
+
+<p>Some projects I'm currently working on but for which I don't have versions fit to be seen, and which will probably never see the light of day:
+
+1) A translation into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). 
+
+2) Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.
+
+3) An intellectual history of the sciences of genetics and genomics.
+</p>
