Adding more html, text edits

--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
-<p>Hi, my name is max. Welcome to my brutalist website.</p> 
+<!doctype html>
 
-<p>I currently work as a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial community samples.</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-<p>My CV is <a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">here</a>.</pr>
+  <title>Max Press</title>
+  <meta name="description" content="Max Press, bioinformatician & genomicist">
+  <meta name="author" content="Max Press">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
 
-<p>If you are masochistic, you can read my dissertation <a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">here</a>.</p>
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
 
-<p>If you want to read papers I've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar</a>.</p>
+<body>
 
-<p>I sometimes <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">embarrass myself in public</a>. On that note, I occasionally express ill-considered opinions on miscellaneous topics <a href="https://medium.com/@iusewords/">on medium</a>.</p>
 
-<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot</a>.</p>
+	<h1>Hi, my name is max.</h1> 
+	
+	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial community samples.</p>
+	
+	<h2>Official things:</h2>
+	
+	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">My CV (pdf).</a></p>
+	
+	<p><a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">My dissertation (pdf).</a></p>
+	
+	<p>If you want to read papers I've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar.</a></p>
+	
+	<h2>Other things:</h2>
+	<p>I sometimes make noise about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
+	
+	<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
+	
+	<h4>Some current side projects:</h4>
+	
+	<ol><li>A translation into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
+	
+	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
+	
+	<li>An intellectual history of the sciences of genetics and genomics.</li>
+	</ol>
 
-<p>I sort of have social media accounts but I wouldn't recommend looking at them.</p>
-
-<p>Some projects I'm currently working on but for which I don't have versions fit to be seen, and which will probably never see the light of day:
-
-1) A translation into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). 
-
-2) Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.
-
-3) An intellectual history of the sciences of genetics and genomics.
-</p>
+	<script src="js/scripts.js"></script>
+</body>
+</html>
