slight changes on top of style

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 	<h1>Hi, my name is max.</h1> 
 	
-	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial community samples.</p>
+	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial communities.</p>
 	
 	<h2>Official things:</h2>
 	
-	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_late2016.pdf">My CV (pdf).</a></p>
+	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2017_latest.pdf">My CV (pdf).</a></p>
 	
 	<p><a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">My dissertation (pdf).</a></p>
 	
