added woltereck link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 	<h4>Some current side projects:</h4>
 	
-	<ol><li>A translation into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
+    <ol><li>A <a href="https://github.com/maximilianpress/miscellaneous/blob/master/experimental-investigations-variation.pdf">translation</a> into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
 	
 	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
