--- a/index.html
+++ b/index.html
@@ -22,22 +22,24 @@
 	
 	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial communities.</p>
 	
-	<h2>Official things:</h2>
+	<h2>Official docs:</h2>
 	
 	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2017_latest.pdf">My CV (pdf).</a></p>
 	
 	<p><a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">My dissertation (pdf).</a></p>
 	
 	<p>If you want to read papers I've published, try <a href="https://scholar.google.com/citations?user=o76x5xQAAAAJ">google scholar.</a></p>
-	
+
+    <p>I have <a href="https://osf.io/2qrk6/">an OSF account </a>, which has a bunch of materials for the papers that I've published.</p>
+
 	<h2>Other things:</h2>
-	<p>I sometimes make noise about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
+	<p>I sometimes yell at the internet about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
 	
 	<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
 	
 	<h4>Some current side projects:</h4>
 	
-    <ol><li>A <a href="https://github.com/maximilianpress/miscellaneous/blob/master/experimental-investigations-variation.pdf">translation</a> into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
+    <ol><li>A <a href="https://github.com/maximilianpress/miscellaneous/blob/master/experimental-investigations-variation.pdf">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
 	
 	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
