added a little stuff to index talking about academic career.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 	<h1>Hi, my name is max.</h1> 
 	
 	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial communities.</p>
-	
+
+    <p> Previously, I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
+
+    <ol><li>Why some bacteria can gain a gene and others can't (not all of them are good at upgrading their operatin systems).</li>
+
+    <li>Microsatellites are weird and probably more important than anyone wants to admit.</li>
+
+    <li>"Epistasis" is a word meaning "you don't actually understand the causal basis of the genotype-phenotype relationship you study".</li>
+
+    <li>Plants grown at high temperatures are bad at telling time.</li>
+
 	<h2>Official docs:</h2>
 	
 	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2017_latest.pdf">My CV (pdf).</a></p>
@@ -43,9 +53,6 @@
 	
 	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
-	<li>An intellectual history of the sciences of genetics and genomics.</li>
-	</ol>
-
 	<script src="js/scripts.js"></script>
 </body>
 </html>
