added a little stuff to index talking about academic career.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p> Previously, I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
 
-    <ol><li>Why some bacteria can gain a gene and others can't (not all of them are good at upgrading their operatin systems).</li>
+    <ol><li>Why some bacteria can gain a gene and others can't (not all of them remember to upgrade their operating systems).</li>
 
     <li>Microsatellites are weird and probably more important than anyone wants to admit.</li>
 
