--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <p> Previously, I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
 
-    <ol><li>Why some bacteria can gain a gene and others can't (not all of them remember to upgrade their operating systems).</li>
+    <ol><li>Why some bacteria can gain a gene and others can't (my answer: not all of them remembered to upgrade their operating systems).</li>
 
-    <li>Microsatellites are weird and probably more important than anyone wants to admit.</li>
+    <li>Microsatellites are weird and probably more important than we want to admit.</li>
 
-    <li>"Epistasis" is a word meaning "you don't actually understand the causal basis of the genotype-phenotype relationship you study".</li>
+    <li>"Epistasis" is a word meaning "we don't understand the causal basis of any genotype-phenotype".</li>
 
     <li>Plants grown at high temperatures are bad at telling time.</li>
 
