--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <li>Microsatellites are weird and probably more important than we want to admit.</li>
 
-    <li>"Epistasis" is a word meaning "we don't understand the causal basis of any genotype-phenotype".</li>
+    <li>"Epistasis" is a word meaning "we don't understand the causal basis of any genotype-phenotype relationship".</li>
 
     <li>Plants grown at high temperatures are bad at telling time.</li>
 
