Updated index.html to reflect new links, other new stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<h1>Hi, my name is max.</h1> 
 	
-	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for finding whole microbial genomes in complex microbial communities.</p>
+	<p class="lead">I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for analyzing host ranges of mobile elements in complex microbial communities.</p>
 
     <p> Previously, I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
 
@@ -34,7 +34,7 @@
 
 	<h2>Official docs:</h2>
 	
-	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2019_academic.pdf">My CV (pdf).</a></p>
+	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2020_academic.pdf">My CV (pdf).</a></p>
 	
 	<p><a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">My dissertation (pdf).</a></p>
 	
@@ -49,7 +49,7 @@
 	
 	<h4>Some current side projects:</h4>
 	
-    <ol><li>A <a href="https://github.com/maximilianpress/miscellaneous/blob/master/experimental-investigations-variation.pdf">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
+    <ol><li>A <a href="osf.io/fvme6/">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
 	
 	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
