fixed broken link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	
 	<h4>Some current side projects:</h4>
 	
-    <ol><li>A <a href="osf.io/fvme6/">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
+    <ol><li>A <a href="https://osf.io/fvme6/">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
 	
 	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
