added link to projects page

--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
 	
 	<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
 	
-	<h4>Some current side projects:</h4>
+    <p><a href="https://maximilianpress.github.io/projects/">Some current side projects.</a></p>
 	
-    <ol><li>A <a href="https://osf.io/fvme6/">translation</a> (in progress) into English of Richard Woltereck's 1909 article containing the first description of reaction norms, and coining of the term ("Reaktionsnorm"). </li>
-	
-	<li>Some thoughts on how science advances and the efficacy of academic science in making these advances, using for instance the example of Grigori Perelman.</li>
 	
 	<script src="js/scripts.js"></script>
 </body>
