added github pointer to index.html.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <li>"Epistasis" is a word meaning "we don't understand the causal basis of any genotype-phenotype relationship".</li>
 
     <li>Plants grown at high temperatures are bad at telling time.</li>
+	    
+        <h2>Code etc.:</h2>
+
+	<p><a href="https://github.com/maximilianpress">I invite you to look at my github. Note that the majority of my private-sector code is not available.</a></p>    
 
 	<h2>Official docs:</h2>
 	
@@ -45,7 +49,7 @@
 	<h2>Other things:</h2>
 	<p>I sometimes yell at the internet about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
 	
-	<p>I maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
+	<p>I occasionally maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
 	
     <p><a href="https://maximilianpress.github.io/projects/">Some current side projects.</a></p>
 	
