fixed github link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	    
         <h2>Code etc.:</h2>
 
-	<p><a href="https://github.com/maximilianpress">I invite you to look at my github. Note that the majority of my private-sector code is not available.</a></p>    
+	<p>I invite you to look at my <a href="https://github.com/maximilianpress">github</a>. Note that the majority of my private-sector code is not available.</p>    
 
 	<h2>Official docs:</h2>
 	
