--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <li>"Epistasis" is a word meaning "we don't understand the causal basis of any genotype-phenotype relationship".</li>
 
-        <li>Plants grown at high temperatures are bad at telling time.</li>
+        <li>Plants grown at high temperatures are bad at telling time.</li></ol>
 
    
 	    
@@ -61,8 +61,6 @@
 	<p>I sometimes yell at the internet about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
 	
 	<p>I occasionally maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
-	
-    <p><a href="https://maximilianpress.github.io/projects/">Some current side projects.</a></p>
 	
 	
 	<script src="js/scripts.js"></script>
