career updates on index.html

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
 
 	<h1>Hi, my name is max.</h1> 
-        <p class="lead">I am a computational biologist/bioinformatician and human. I like simple tools, plants, and other useful devices.</p>	
-
-
+        <p class="lead">I am a computational biologist/bioinformatician and human. I like simple tools, plants, and being outside.</p>	
          
-        <h2>Currently, </h2>
-        <p>I am currently a bioinformatician for Phase Genomics Inc., where I work on methods for analyzing host ranges of mobile elements in complex microbial communities.</p>
+        <h2>In industry, </h2>
+        <p>I currently work for Inscripta in the Computational Sciences and Engineering Group, where I try to solve biological problems with computers to make genome engineering easier. I specialize in detecting weird stuff..</p>
+        <p>I previously worked as a bioinformatician for Phase Genomics Inc., working on methods for analyzing host ranges of mobile elements in complex microbial communities.</p>
 
         <h2>Science stuff</h2>
-        <p> Previously, I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
+        <p> I did my graduate work and a short postdoc studying a grab bag of topics in genetics and genomics, including such random things as:</p>
 
         <ol><li>Why some bacteria can gain a gene and others can't (my answer: not all of them remembered to upgrade their operating systems).</li>
 
@@ -43,7 +42,7 @@
 
 	<h2>Official docs:</h2>
 	
-	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2020_academic.pdf">My CV (pdf).</a></p>
+	<p><a href="https://github.com/maximilianpress/PRESS_CV/blob/master/Press_CV_2020_academic.pdf">My CV (pdf). Updated periodically.</a></p>
 	
 	<p><a href="https://github.com/maximilianpress/gs_thesis/blob/master/observations-effects-epistasis/main.pdf">My dissertation (pdf).</a></p>
 	
@@ -55,13 +54,11 @@
         <p><a href="https://maximilianpress.github.io/projects/">I occasionally update a page with some stuff I'm working on..</a></p>
         <li>German-English translation of old genetics literature.</li>
         <li>A work-in-progress repeat inference toolkit based on k-mers and simple-minded algorithm.</li>
-        <li>I'm contributing to PhageTerm, a tool for annotating and finishing phage genomes. The official tool will be released by the main team at Pasteur (led by Julian Garneau),but in the meantime there is a Python3-compatible version <a href="https://github.com/maximilianpress/phageterm">on my github</a>.</li> 
+        <li>Assorted scientific OSS. I contributed recently to PhageTerm, a tool for annotating and finishing phage genomes.</li> 
        
         <h2>Throwaway stuff:</h2>
-	<p>I sometimes yell at the internet about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a> or <a href="https://medium.com/@iusewords/">in my own.</a></p>
-	
-	<p>I occasionally maintain a <a href="https://twitter.com/EurovizhnWisdom">silly twitterbot.</a></p>
-	
+        <p>I sometimes yell at the internet about science <a href="http://www.vox.com/2016/7/14/12016710/science-challeges-research-funding-peer-review-process">in other people's articles</a>. Low reliability.</p> 
+        <p>I answer questions on Biology and Bioinformatics StackExchange sites, where I've been a top 10 contributor for the past couple of years.</p>	
 	
 	<script src="js/scripts.js"></script>
 </body>
