--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 	<h2>Hi, my name is max.</h2> 
-        <p> class="lead">I am a computational biologist/bioinformatician (15 years' experience) and moderately ok human.</p>
+        <p> I am a computational biologist/bioinformatician (15 years' experience) and moderately ok human.</p>
         <p> I like simple tools, plants, my family, and being outside. </p>
          
         <h3>In industry (all startups, ~10 years' experience): </h3>
