--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p> I am a computational biologist/bioinformatician (15 years' experience) and moderately ok human.</p>
         <p> I like simple tools, plants, my family, and being outside. </p>
          
-        <h3>In industry (all startups, ~10 years' experience): </h3>
+        <h3>In industry (~10 years in startups): </h3>
         <p>Right now, I'm at Nautilus. I've worked on statistical modeling of affinity reagent behavior, experimentalist-facing infrastructure, production pipeline database interactions, experimental design, deconvolution algorithm benchmarking, and all kinds of stuff.</p>
         <p>I previously worked as a bioinformatician for Inscripta, solving biological problems with computers to make genome engineering easier. I specialized in detecting weird stuff.</p>
         <p>Before that, I worked for Phase Genomics Inc., working on computational methods for analyzing host ranges of mobile elements in complex microbial communities.</p>
